V2.00 (xx.xx.2014):
 - some experimental OpenCl-code which can cause faster rendering on some devices (use the new checkbox in the launcher to turn it on or off, per default it is off) 
 - experimental channel mixer which allows to adjust raw fractal colors using several modes:
    - gamma
    - rgb (one curve for each color component)
    - full (three curves for each color component)
 - new "NBlur"-bokeh style
 - optimized the refresh of the display of the interactive renderer (disable property tinaOptimizedRenderingIR in the Prefs if this makes problems on slow machines) 
 - several small optimizations to the renderer
 - the launcher now shows an error message (different from the technical java-error) when it detects a 32bit java and a memory usage below 1 GB 

 - retain selected layer after "Undo"/"Redo"
 - smoother transition between DoF and non-DoF-areas
 - new "Stripes"-random-gradient-generator
 - renamed the misspelled "Responsibility"-property into "Responsiveness"
 - fine-tuned the new "responsiveness"-setting

 - new "Black&White"-random-flame-generator inspired by the "B&W converter"-script by Brad Stefanov and Mick Hogan
 - changed the "*crop", "*circlecrop" and "fract*"-variations to use the new mechanism to hide samples (should remove an "annoying vertical line" in some cases)
 - support for actually hiding pixels which can be used from within variations to control visibility, especiall useful for cropping which really crops instead of setting points at a random position or zero
 - added a new experimental option to make the program (and the OS) more responsible while rendering. This is enabled by default. Change the property "tinaResponsibility" in the Prefs-window to tune the behaviour
 - internally reworked the strategy of the refresh of the display of the interactive renderer