@@ -5,7 +5,7 @@
  
   <info>
     <appname>JWildfire</appname>
-    <appversion>2.00 BETA 1</appversion>
+    <appversion>2.00 BETA 3</appversion>
     <appsubpath>JWildfire</appsubpath>
     <javaversion>1.6</javaversion>
     <url>http://jwildfire.org/</url>
